# notebooks

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-jupyter.txt  requirements.txt
notebooks/: example.ipynb  introduction-to-sympy.ipynb  supervised-learning.ipynb
scripts/: help-mk.sh
