[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks"
version = "0.0.1"
dependencies = []
requires-python = ">=3.12"

[project.optional-dependencies]
jupyter = [
  "ipykernel>=6.29"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 120
target-version = "py312"
