[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks"
version = "0.0.1"
dependencies = [
  "sympy>=1.14"
]
requires-python = ">=3.12"

[project.optional-dependencies]
jupyter = [
  "ipykernel>=7.1"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.setuptools]
package-dir = { "" = "src" }
